# Discord_Bot_Prac

./: .gitignore  CMakeLists.txt  Crawling_P.cpp  Http_Request_P.cpp  README.md  main.cpp
include/: Custom_Class.h  Discord_BOT.h  Maple_API.h
src/: Character.h  Discord_BOT.cpp  Discord_BOT.h  Discord_BOT_CMD.cpp  Discord_BOT_Embed.cpp  Discord_BOT_Handler.cpp  Discord_BOT_Log.cpp  Discord_BOT_Main.cpp  Discord_BOT_Utility.cpp  Maple_API.cpp  Maple_API.h  Maple_API_Parser.cpp
